stretched out header and fixed colors

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,10 @@
 .footer-bottom {
   background-color: #026480;
-  min-height: 30px;
-  width: 100%;
+  min-height: 100%;
+  height: auto;
+  margin-bottom: -50px; 
+  display: block;
+  float: bottom;
 }
 .copyright {
   color: #fff;
